# aibia

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
backend/: .env.example  migrate.sql  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agent/: agent.py  agent_loop.py  prompts.py
backend/app/agent/tools/: __init__.py  definitions.py  handlers.py
backend/app/api/: agent.py  approvals.py  campaigns.py  contact.py  dashboard.py  deps.py  email.py  leads.py  rate_limit.py  routes.py  social.py  stripe_billing.py  usage.py
backend/app/models/: __init__.py  approval_item.py  base.py  campaign.py  chat_conversation.py  email_account.py  email_message.py  lead.py  social_post.py  user_subscription.py  user_usage.py
backend/app/services/: gmail.py  outlook.py  smtp.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/chat/: ChatWindow.css  ChatWindow.tsx
frontend/src/components/layout/: Sidebar.css  Sidebar.tsx
frontend/src/pages/: Account.css  Account.tsx  AgentRun.css  AgentRun.tsx  Approvals.css  Approvals.tsx  Campaigns.css  Campaigns.tsx  Chat.tsx  Dashboard.css  Dashboard.tsx  Inbox.css  Inbox.tsx  Landing.css  Landing.tsx  Leads.css  Leads.tsx  Legal.css  Login.tsx  Privacy.tsx  Settings.css  Settings.tsx  Social.css  Social.tsx  Terms.tsx  Upgrade.css  Upgrade.tsx  shared.css
frontend/src/types/: index.ts
